--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Edwin</h1>
+    <a href="./Dia 2/index2.html">
+        Este elemento te llevara a el ejercicio del dia 2
+    </a>
+    <a href="./practica 1/index.html">
+        Este enlace te llevara a la practica 1
+    </a>
 </body>
 </html>
