--- a/practica 1/index.html
+++ b/practica 1/index.html
@@ -4,15 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
+
+    <style>
+        h1 {
+            color:rgb(255, 0, 0);
+        }
+        p {
+            color:rgb(4, 0, 255)
+        }
+    </style>
 </head>
-<body>
+<body style="background-color: rgb(252, 246, 197);">
+
     <h1>HOLA, SOY EDWIN ALZATE</h1>
     <img
-    src="./Mi familia.jpg"
-    alt="Mi familia"
-    height="300px"
+        src="./Mi familia.jpg"
+        alt="Mi familia"
+        width="230px"
+        height="300px"
     />
-    <p><h3><strong>Bienvenidos a mi pagina personal.</strong></h3>
-    Aqui encontraras información sobre mi.</p>
+    <h2>BIENVENIDOS A MI PAGINA PERSONAL</h2>
+        <p class="p">Aqui encontraras información sobre mi.</p>
+
+    <h3>SOBRE MI:</h3>
+        <p>
+            Hola, soy una persona tranquila y curiosa, siempre con ganas de aprender algo nuevo.<br> 
+            Me dedico a las ventas, pero más allá del trabajo, disfruto mucho pasar tiempo con mis dos hijos, con ellos y ver cómo crecen cada día. <br>
+            Me encanta tocar la guitarra y asistir a la iglesia, son momentos que me recargan el alma. <br>
+            También me gusta dibujar, escuchar música y experimentar en la cocina con nuevas recetas (a veces salen bien, otras… pues se intenta 😅). <br>
+            Siempre estoy buscando un buen equilibrio entre lo que me gusta, mi familia y seguir creciendo como persona.
+        </p>
+    <img
+        src="./Con mis chiquis.jpg"
+        alt="Con mis chiquis"
+        width="150px"
+        height="200px"
+        />
+
+        <h3>⭐ MIS HABILIDADES:</h3>
+    <ol class="Ol">        
+            <li>🎸 Tocar guitarra.</li>
+            <li>🎧 Mezclar musica.</li>
+            <li>✍ Dibujar.</li>
+            <li>👨‍🍳 Cocinar y probar nuevas recetas.</li>
+            <li>📹 Edicion de video.</li>
+            <li>🎨 Publicidad.</li>
+    </ol>
+
+<h3>💻 MIS REDES SOCIALES:</h3>
+
+<ul class="Ul">
+    <li>
+        <a href="https://www.facebook.com/Alzate1075/about" target="_blank">📘 Facebook</a> 
+        <!-- Target="_blank" permite que la pagina se abra en otra pestaña -->
+    </li>
+    <li>
+        <a href="https://www.tiktok.com/@artbeat.studios?is_from_webapp=1&sender_device=pc" target="_blank">🎶 Tiktok</a> 
+        <!-- Target="blank" permite que la pagina se abra en otra pestaña -->
+    </li>
+    <li>
+        <a href="https://www.instagram.com/alzarte1075/reels/" target="_blank">📷 instagram</a>
+    </li>
+</ul>
+    <br>
+    <footer class="foot">
+        <p><h4>No olvides seguirme en mis redes sociales.</h4>
+        <h3>¡Hasta pronto!</h3>
+        </p>
+    </footer>
+    
 </body>
 </html>
