--- a/practica 1/index.html
+++ b/practica 1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PRACTICA 1</title>
     <link rel="stylesheet" href="./styles.css" />
 
     <style>
@@ -65,6 +65,9 @@
     </li>
     <li>
         <a href="https://www.instagram.com/alzarte1075/reels/" target="_blank">📷 instagram</a>
+    </li>
+    <li>
+        <a href="https://www.youtube.com/@edal905" target="_blank">◀ Youtube</a>
     </li>
 </ul>
     <br>
