--- a/Dia 3/index3.html
+++ b/Dia 3/index3.html
@@ -15,5 +15,41 @@
     <p class="Caja2">
         <strong>MY BOX 2</strong></p>
     </div>
+    <table>
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Celular</th>
+                <th>Correo</th>
+                <th>Pais</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Pablo</td>
+                <td>31245674</td>
+                <td>pablo@gmail.com</td>
+                <td>Argentina</td>
+            </tr>
+            <tr>
+                <td>Juan</td>
+                <td>34384574</td>
+                <td>juan@gmail.com</td>
+                <td>Perú</td>
+            </tr>
+            <tr>
+                <td>Pedro</td>
+                <td>315988356</td>
+                <td>pedro@gmail.com</td>
+                <td>Uruguay</td>
+            </tr>
+            <tr>
+                <td>Sandra</td>
+                <td>3590685468</td>
+                <td>sandra@gmail.com</td>
+                <td>Chile</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
