--- a/Dia 3/index3.html
+++ b/Dia 3/index3.html
@@ -7,15 +7,18 @@
     <title>Dia 3</title>
 </head>
 <body>
-    <div class="caja-contenedor">CAJA 1</div>
+<!--     <div class="caja-contenedor">CAJA 1</div>
 
     <div class="ContenedorPrueba">
     <p class="Caja1">
         <strong>MY BOX 1</strong></p>
     <p class="Caja2">
         <strong>MY BOX 2</strong></p>
-    </div>
-    <table>
+    </div> -->
+
+    <main class="container">
+
+    <!-- <table>
         <thead>
             <tr>
                 <th>Nombre</th>
@@ -50,6 +53,24 @@
                 <td>Chile</td>
             </tr>
         </tbody>
-    </table>
+    </table> -->
+    <form id="formulario">
+        <h2 class="titulo-formulario">Login</h2>
+
+        <div class="contenedor-nombre">
+        <p>Nombre:</p>
+        <p>Apellido:</p>
+        </div>
+
+        <div class="contenedor-inputs">
+        <input type="text" placeholder="Ingresa tu Nombre">
+        <input type="text" placeholder="Ingresa tu Apellido">
+        </div>
+
+        <p>Ingresa tu Edad</p>
+        <input type="number">
+        <button>Enviar datos</button>
+    </form>
+    </main>
 </body>
 </html>
