--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
-</head>
-<body>
-    <a href="./Dia 2/index2.html">
-        Este elemento te llevara a el ejercicio del dia 2
-    </a>
-    <a href="./practica 1/index.html">
-        Este enlace te llevara a la practica 1
-    </a>
-</body>
+  </head>
+  <body>
+    <h1>PORTAFOLIO FUNVAL</h1>
+    <h3>PRACTICAS CALIFICADAS</h3>
+
+    <div Contenedor1>
+      <div class="Dia2">
+        <a href="./Dia 2/index2.html" target="_blank">
+          Este elemento te llevará al ejercicio del día 2</a
+        >
+      </div>
+
+      <div class="Practica1">
+        <a href="./practica 1/index.html" target="_blank">
+          Este enlace te llevará a la práctica 1</a
+        >
+      </div>
+
+      <div class="Practica2">
+        <a href="./practica 2/index.html" target="_blank">
+          Este enlace te llevará a la práctica 2</a
+        >
+      </div>
+
+      <div class="Practica3">
+        <a href="./practica 2/index.html" target="_blank">
+          Este enlace te llevará a la práctica 3</a
+        >
+      </div>
+    </div>
+  </body>
 </html>
