--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -13,7 +13,7 @@
             <form id="Form-Artbeats" >
 
                 <div class="logo">
-                    <img src="./jpg/Arbeatlogo2.png" alt="Logo Artbeat">
+                    <img src="./jpg/LogoArtbeats.png" alt="Logo Artbeat">
                 </div>
           
                 <div class="parrafo1">
