--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Document</title>
+    <title>Portafolio_Funval</title>
   </head>
   <body>
     <h1>PORTAFOLIO FUNVAL</h1>
@@ -13,19 +13,19 @@
     <div Contenedor1>
       <div class="Dia2">
         <a href="./Dia 2/index2.html" target="_blank">
-          Este elemento te llevará al ejercicio del día 2</a
+          Ejercicio del día 2 - Web de Peliculas</a
         >
       </div>
 
       <div class="Practica1">
         <a href="./practica 1/index.html" target="_blank">
-          Este enlace te llevará a la práctica 1</a
+          Práctica 1 - Mi pagina Personal</a
         >
       </div>
 
       <div class="Practica2">
         <a href="./practica 2/index.html" target="_blank">
-          Este enlace te llevará a la práctica 2</a
+          Práctica 2 - Formulario Artbeats</a
         >
       </div>
 
