--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
     <title>Portafolio_Funval</title>
   </head>
   <body>
-    <h1>PORTAFOLIO FUNVAL</h1>
-    <h3>PRACTICAS CALIFICADAS</h3>
+    <div class="Titulo">
+      <h1>PORTAFOLIO FUNVAL</h1>
+    </div>
 
-    <div Contenedor1>
+    <div class="practica">
+      <h3>PRACTICAS CALIFICADAS</h3>
+    </div>
+
+    <div semana1>
       <div class="Dia2">
         <a href="./Dia 2/index2.html" target="_blank">
           Ejercicio del día 2 - Web de Peliculas</a
         >
+        <img src="./Dia 2/jpg/Movies.png" alt="Movies" height="100px"
       </div>
 
       <div class="Practica1">
@@ -30,8 +36,8 @@
       </div>
 
       <div class="Practica3">
-        <a href="./practica 2/index.html" target="_blank">
-          Este enlace te llevará a la práctica 3</a
+        <a href="./practica 3/index.html" target="_blank">
+          Práctica 3 - CodeCraft</a
         >
       </div>
     </div>
