--- a/Dia 5/Sesion Mañana/index.html
+++ b/Dia 5/Sesion Mañana/index.html
@@ -11,7 +11,7 @@
     <header class="cabecera">
 
         <h1>contenedor de cajas by Edal</h1>
-        <nav>maenú</nav>
+        <nav>menú</nav>
     </header>
 
     <main class="super-contenedor">
