--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div semana1>
       <div class="Dia2">
         <a href="./Dia 2/index2.html" target="_blank">
-          Ejercicio del día 2 - Web de Peliculas</a
+          Día 2 - Web de Peliculas</a
         >
         <img src="./Dia 2/jpg/Movies.png" alt="Movies" height="100px"
       </div>
@@ -38,6 +38,12 @@
       <div class="Practica3">
         <a href="./practica 3/index.html" target="_blank">
           Práctica 3 - CodeCraft</a
+        >
+      </div>
+
+      <div class="Dia5">
+        <a href="./Dia 5/Practica Noticias/noticias.html" target="_blank">
+          Dia 5 - Pagina web Noticias</a
         >
       </div>
     </div>
