--- a/Dia 2/index2.html
+++ b/Dia 2/index2.html
@@ -60,9 +60,7 @@
             height="200px"
           />
           <p>
-            <strong
-              >Un investigador muy inteligente y medio loco</strong
-            >
+            <strong>Un investigador muy inteligente y medio loco</strong>
           </p>
         </div>
       </div>
