--- a/Dia 2/index2.html
+++ b/Dia 2/index2.html
@@ -60,7 +60,7 @@
             height="200px"
           />
           <p>
-            <strong>Un investigador muy inteligente y medio loco</strong>
+            <strong>Un investigador inteligente y loco</strong>
           </p>
         </div>
       </div>
@@ -73,7 +73,7 @@
             alt="Avengers"
             height="200px"
           />
-          <p><strong>Héroes que pelean para vengar el universo</strong></p>
+          <p><strong>Héroes vengan el universo</strong></p>
         </div>
 
         <div class="pelicula">
@@ -83,7 +83,7 @@
             alt="Matrix"
             height="200px"
           />
-          <p><strong>El elegido para pelear contra las máquinas</strong></p>
+          <p><strong>El elegido pelea contra las máquinas</strong></p>
         </div>
 
         <div class="pelicula">
@@ -105,7 +105,7 @@
             alt="Titanes"
             height="200px"
           />
-          <p><strong>Robots gigantes pelean contra monstruos</strong></p>
+          <p><strong>Robots gigantes vs monstruos</strong></p>
         </div>
 
         <div class="pelicula">
