--- a/Dia 5/Sesion tarde/index.html
+++ b/Dia 5/Sesion tarde/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css">
-    <title>Dia 5 - Sesion tarde</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Dia 5 - Queries</title>
   </head>
   <body>
     <div class="contenedor">
-      <div class="caja caja-1">Caja 1</div>
-      <div class="caja caja-2">Caja 2</div>
-      <div class="caja caja-3">Caja 3</div>
-      <div class="caja caja-4">Caja 4</div>
-      <div class="caja caja-5">Caja 5</div>
-      <div class="caja caja-6">Caja 6</div>
+      <div class="caja caja-1">1</div>
+      <div class="caja caja-2">2</div>
+      <div class="caja caja-3">3</div>
+      <div class="caja caja-4">4</div>
+      <div class="caja caja-5">5</div>
+      <div class="caja caja-6">6</div>
     </div>
   </body>
 </html>
