--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
       </div>
 
       <div class="Dia5">
-        <a href="./Dia 5/Practica Noticias/noticias.html" target="_blank">
+        <a href="./Dia 5/Practica Noticias/index.html" target="_blank">
           Dia 5 - Pagina web Noticias</a
+        >
+
+        <div class="Dia7">
+        <a href="./Dia 7/Proyecto Concert/index.html" target="_blank">
+          Dia 7 - Proyecto Concert</a
         >
       </div>
     </div>
