--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       </div>
 
       <div class="Dia5">
-        <a href="./Dia 5/Practica Noticias/index.html" target="_blank">
+        <a href="./Dia-5/Practica Noticias/noticias.html" target="_blank">
           Dia 5 - Pagina web Noticias</a
         >
 
         <div class="Dia7">
-        <a href="./Dia 7/Proyecto Concert/index.html" target="_blank">
+        <a href="./dia-7/proyecto/index.html" target="_blank">
           Dia 7 - Proyecto Concert</a
         >
       </div>
