--- a/practica-MP/Index_Inicio.html
+++ b/practica-MP/Index_Inicio.html
@@ -100,7 +100,7 @@
       </section>
 
       <section
-        class="Modulos py-[10px] w-[90%] max-w-[1000px] m-auto overflow-hidden"
+        class="Modulos py-[10px] w-[90%] max-w-[1000px] m-auto overflow-hidden mb-9"
       >
         <div class="contenedor">
           <h2
@@ -220,82 +220,47 @@
         </div>
         <div class="flex justify-center mt-6 m-4">
           <button
-            class="cursor-pointer text-3xl text-white bg-blue-700 hover:bg-blue-900 p-4 rounded-lg shadow-lg transition-transform duration-300 hover:scale-105"
+            class="cursor-pointer text-2xl text-white bg-blue-700 hover:bg-blue-900 p-4 rounded-lg shadow-lg transition-transform duration-300 hover:scale-105"
           >
             Descargar CV 📜
           </button>
         </div>
       </section>
-
-      <!-- <section
-        class="about-services flex flex-col items-center bg-gray-200 gap-4"
-      >
-        <div class="contenedor text-center items-center justify-center gap-4">
-          <h2 class="titulo">Nuestros Servicios</h2>
-          <div class="servicio-cont flex col-3 gap-12">
-            <div class="servicio-ind pb-4">
-              <img src="Jpg/Servicios/Desarrollo.jpg" alt="Servicio" />
-              <h3>"DESARROLLO DE SOFTWARE"</h3>
-              <p>
-                Creación de aplicaciones y soluciones personalizadas que se
-                ajustan a las necesidades específicas de cada cliente,
-                utilizando tecnologías modernas y metodologías ágiles para
-                garantizar un producto de alta calidad y funcionalidad.
-              </p>
-            </div>
-            <div class="servicio-ind pb-4">
-              <img src="Jpg/Servicios/Consultopria.png" alt="Servicio" />
-              <h3>"CONSULTORIA TECNOLOGICA"</h3>
-              <p>
-                Asesoramiento experto para empresas que buscan optimizar sus
-                procesos tecnológicos, mejorar su infraestructura de software o
-                implementar nuevas herramientas digitales que impulsen su
-                crecimiento y eficiencia operativa.
-              </p>
-            </div>
-            <div class="servicio-ind pb-4">
-              <img src="Jpg/Servicios/Aplicaciones.png" alt="Servicio" />
-              <h3>"DESARROLLO DE APLICACIONES MOVILES"</h3>
-              <p>
-                Diseño y creación de aplicaciones móviles innovadoras y
-                funcionales para iOS y Android, enfocadas en ofrecer una
-                excelente experiencia de usuario y cumplir con los objetivos
-                comerciales de nuestros clientes.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section> -->
     </main>
     <footer>
-      <div class="contenedor-footer text-white items-center justify-center">
-        <div class="content-foo">
-          <h4>TELEFONO</h4>
-          <p>(+57) 317 497 3545</p>
+      <div
+        class="footer-container bg-gradient-to-b from-[#3b2b8c] to-[#7265d7] text-white"
+      >
+        <div
+          class="footer flex justify-around text-center text-1xl p-6 md:text-lg gap-4"
+        >
+          <div class="content-foo text-white">
+            <h4>TELEFONO</h4>
+            <p class="text-yellow-400">(+57) 317 497 3545</p>
+          </div>
+          <div class="content-foo text-white">
+            <h4>EMAIL</h4>
+            <p class="text-yellow-400">codecraft@gmail.com</p>
+          </div>
+          <div class="content-foo text-white">
+            <h4>DIRECCION</h4>
+            <p class="text-yellow-400">Avenida Siempre viva</p>
+          </div>
         </div>
-        <div class="content-foo">
-          <h4>EMAIL</h4>
-          <p>codecraft@gmail.com</p>
-        </div>
-        <div class="content-foo">
-          <h4>DIRECCION</h4>
-          <p>Bogota - Avenida Siempre viva</p>
-        </div>
-      </div>
+        <div class="flex justify-center items-center gap-8">
+          <h2 class="http text-1xl text-white">
+            &copy; https://CodeCraft.com.co
+          </h2>
 
-      <div class="flex justify-around items-center">
-        <h2 class="http text-2xl text-white">
-          &copy; https://CodeCraft.com.co
-        </h2>
-
-        <div class="flex justify-end m-6">
-          <a href="#top" aria-label="Volver al inicio"
-            ><button
-              class="cursor-pointer text-lg font-semibold bg-white text-center p-2 rounded-2xl shadow-lg hover:bg-yellow-200 transition-colors duration-300 hover:scale-105"
+          <div class="flex justify-end m-6">
+            <a href="#top" aria-label="Volver al inicio"
+              ><button
+                class="cursor-pointer text-lg font-semibold text-white bg-red-600 text-center p-2 rounded-2xl shadow-lg hover:bg-green-600 transition-colors duration-300 hover:scale-105 px-4"
+              >
+                INICIO
+              </button></a
             >
-              VOLVER AL INICIO
-            </button></a
-          >
+          </div>
         </div>
       </div>
     </footer>
