--- a/dia-7/proyecto/index.html
+++ b/dia-7/proyecto/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./output.css" />
-    <title>Document</title>
+    <title>Dia 7 - Concietos</title>
   </head>
   <body class="bg-[#211f2d] flex items-center justify-center h-screen">
     <section class="flex gap-4">
