--- a/practica-MP/Index_Inicio.html
+++ b/practica-MP/Index_Inicio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./output.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mini Proyecto</title>
+    <title>INICIO MiniProyecto</title>
     <link
       rel="shortcut icon"
       href="./Jpg/Logos/CodeCraft/CodeCraftIcon.png"
@@ -123,11 +123,17 @@
               <div
                 class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
               >
-                <img
-                  src="Jpg/Iconos/Target.png"
-                  alt="Icono-Target"
-                  class="w-[50px] h-[50px] object-contain mb-2"
-                />
+                <a
+                  href="Index_Portafolio.html"
+                  target="_blank"
+                  aria-label="portafolio"
+                >
+                  <img
+                    src="Jpg/Iconos/Target.png"
+                    alt="Icono-Target"
+                    class="w-[50px] h-[50px] object-contain mb-2"
+                  />
+                </a>
                 <p class="text-white font-semibold">Portafolio</p>
               </div>
             </div>
@@ -144,11 +150,17 @@
               <div
                 class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
               >
-                <img
-                  src="Jpg/Iconos/Target.png"
-                  alt="Icono-Target"
-                  class="w-[50px] h-[50px] object-contain mb-2"
-                />
+                <a
+                  href="Index_servicios.html"
+                  target="_blank"
+                  aria-label="servicios"
+                >
+                  <img
+                    src="Jpg/Iconos/Target.png"
+                    alt="Icono-Target"
+                    class="w-[50px] h-[50px] object-contain mb-2"
+                  />
+                </a>
                 <p class="text-white font-semibold">Servicios</p>
               </div>
             </div>
@@ -165,11 +177,17 @@
               <div
                 class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
               >
-                <img
-                  src="Jpg/Iconos/Target.png"
-                  alt="Icono-Target"
-                  class="w-[50px] h-[50px] object-contain mb-2"
-                />
+                <a
+                  href="Index_contactanos.html"
+                  target="_blank"
+                  aria-label="servicios"
+                >
+                  <img
+                    src="Jpg/Iconos/Target.png"
+                    alt="Icono-Target"
+                    class="w-[50px] h-[50px] object-contain mb-2"
+                  />
+                </a>
                 <p class="text-white font-semibold">Contáctanos</p>
               </div>
             </div>
