--- a/practica-MP/Index_contactanos.html
+++ b/practica-MP/Index_contactanos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./output.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mini Proyecto</title>
+    <title>CONTACTANOS MiniProyecto</title>
     <link
       rel="shortcut icon"
       href="./Jpg/Logos/CodeCraft/CodeCraftIcon.png"
@@ -40,15 +40,22 @@
           >Contáctanos</a
         >
       </nav>
-      <br />
-      <div class="flex justify-center items-center pt-2 mb-4">
+      <div
+        class="w-full flex justify-center md:justify-start items-center pt-2 mb-4 px-4"
+      >
         <img
           src="./Jpg/Logos/CodeCraft/CodeCraftLogo1.png"
           alt="Logo CodeCraft"
-          class="w-full max-w-xs sm:max-w-md md:max-w-lg h-auto object-contain mx-auto"
+          class="w-24 sm:w-32 md:w-36 lg:w-40 h-auto md:ml-18"
         />
       </div>
-
+      <div>
+        <img
+          src="./Jpg/Logos/Titulos/LogoContactanos.png"
+          alt="Portafolio"
+          class="w-full max-w-xs sm:max-w-md md:max-w-lg h-auto object-contain mx-auto mt-8"
+        />
+      </div>
       <!-- clase wave (Ola) -->
       <div class="wave" style="height: 100px; overflow: hidden">
         <svg
@@ -64,8 +71,111 @@
       </div>
     </header>
 
-    <main></main>
+    <main
+      class="flex flex-col justify-center items-center py-10 bg-gray-100 dark:bg-gray-900"
+    >
+      <!-- Formulario -->
+      <form
+        action="#"
+        method="POST"
+        class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-lg w-full max-w-lg"
+      >
+        <h2
+          class="text-2xl font-bold mb-6 text-center text-[#3b2b8c] dark:text-yellow-400"
+        >
+          Contáctanos
+        </h2>
 
+        <div class="mb-4">
+          <label
+            for="username"
+            class="block text-gray-700 dark:text-gray-200 font-semibold mb-2"
+            >Nombre de usuario</label
+          >
+          <input
+            type="text"
+            id="username"
+            name="username"
+            placeholder="Ingrese su usuario"
+            required
+            class="w-full p-3 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-900 dark:text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-[#7265d7]"
+          />
+        </div>
+
+        <div class="mb-4">
+          <label
+            for="email"
+            class="block text-gray-700 dark:text-gray-200 font-semibold mb-2"
+            >Correo</label
+          >
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Ingrese su correo"
+            required
+            class="w-full p-3 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-900 dark:text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-[#7265d7]"
+          />
+        </div>
+
+        <div class="mb-6">
+          <label
+            for="message"
+            class="block text-gray-700 dark:text-gray-200 font-semibold mb-2"
+            >Mensaje</label
+          >
+          <textarea
+            id="message"
+            name="message"
+            rows="5"
+            placeholder="Mensaje"
+            required
+            class="w-full p-3 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-900 dark:text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-[#7265d7]"
+          ></textarea>
+        </div>
+
+        <div class="text-center">
+          <button
+            type="submit"
+            class="cursor-pointer bg-[#3b2b8c] dark:bg-yellow-400 text-white dark:text-gray-900 px-6 py-3 rounded-xl hover:bg-[#7265d7] dark:hover:bg-yellow-300 transition duration-300"
+          >
+            Enviar mensaje
+          </button>
+        </div>
+      </form>
+
+      <!-- Sección de redes sociales -->
+      <div class="mt-8 flex gap-6">
+        <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+          <img
+            src="./Jpg/Redes Sociales/Facebook.png"
+            alt="Facebook"
+            class="w-10 h-10 hover:scale-110 transition duration-300"
+          />
+        </a>
+        <a href="https://tiktok.com" target="_blank" aria-label="Tiktok">
+          <img
+            src="./Jpg/Redes Sociales/Tiktiok.png"
+            alt="Twitter"
+            class="w-10 h-10 hover:scale-110 transition duration-300"
+          />
+        </a>
+        <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+          <img
+            src="./Jpg/Redes Sociales/Instagram.jpg"
+            alt="Instagram"
+            class="w-10 h-10 hover:scale-110 transition duration-300 rounded-lg"
+          />
+        </a>
+        <a href="https://youtube.com" target="_blank" aria-label="LinkedIn">
+          <img
+            src="./Jpg/Redes Sociales/Youtube.png"
+            alt="LinkedIn"
+            class="w-10 h-10 hover:scale-110 transition duration-300"
+          />
+        </a>
+      </div>
+    </main>
     <footer>
       <div
         class="footer-container bg-gradient-to-b from-[#3b2b8c] to-[#7265d7] text-white"
