--- a/practica-MP/Index_servicios.html
+++ b/practica-MP/Index_servicios.html
@@ -5,13 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./output.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mini Proyecto</title>
+    <title>SERVICIOS MiniProyecto</title>
     <link
       rel="shortcut icon"
       href="./Jpg/Logos/CodeCraft/CodeCraftIcon.png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./Estilo/styles.css" />
+
+    <style>
+      @keyframes llamaUV {
+        0% {
+          box-shadow: 0 0 20px 10px rgba(138, 43, 226, 0.4),
+            0 0 40px 20px rgba(255, 0, 255, 0.3),
+            0 0 60px 30px rgba(0, 255, 255, 0.2);
+        }
+        50% {
+          box-shadow: 0 0 30px 15px rgba(255, 0, 255, 0.6),
+            0 0 50px 25px rgba(138, 43, 226, 0.5),
+            0 0 70px 35px rgba(0, 255, 255, 0.4);
+        }
+        100% {
+          box-shadow: 0 0 20px 10px rgba(138, 43, 226, 0.4),
+            0 0 40px 20px rgba(255, 0, 255, 0.3),
+            0 0 60px 30px rgba(0, 255, 255, 0.2);
+        }
+      }
+
+      .llamas-uv {
+        animation: llamaUV 2.5s ease-in-out infinite;
+      }
+    </style>
   </head>
 
   <body class="w-full h-full">
@@ -40,12 +64,20 @@
           >Contáctanos</a
         >
       </nav>
-      <br />
-      <div class="flex justify-center items-center pt-2 mb-4">
+      <div
+        class="w-full flex justify-center md:justify-start items-center pt-2 mb-4 px-4"
+      >
         <img
           src="./Jpg/Logos/CodeCraft/CodeCraftLogo1.png"
           alt="Logo CodeCraft"
-          class="w-full max-w-xs sm:max-w-md md:max-w-lg h-auto object-contain mx-auto"
+          class="w-24 sm:w-32 md:w-36 lg:w-40 h-auto md:ml-18"
+        />
+      </div>
+      <div>
+        <img
+          src="./Jpg/Logos/Titulos/LogoServicios.png"
+          alt="Portafolio"
+          class="w-full max-w-xs sm:max-w-md md:max-w-lg h-auto object-contain mx-auto mt-8"
         />
       </div>
 
@@ -64,7 +96,105 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <section
+        class="grid grid-cols-1 md:grid-cols-2 gap-10 m-16 place-items-center"
+      >
+        <!-- Dj Productor -->
+        <div class="flex flex-col items-center text-center max-w-md">
+          <div
+            class="DJ-Mezclas relative w-[400px] h-[400px] rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv"
+          >
+            <a
+              href="https://www.youtube.com/watch?v=GBouFAMhP4s"
+              target="_blank"
+              aria-label="portafolio"
+            >
+              <video
+                src="./Jpg/Servicios/Videos/Dj-mezclasVid.mp4"
+                autoplay
+                muted
+                loop
+                playsinline
+                class="w-full h-full object-cover"
+              ></video>
+            </a>
+          </div>
+          <p class="text-2xl mt-4">
+            "Soy un aprendiz de DJ y productor musical apasionado por crear
+            experiencias sonoras que conectan emociones, estilos y momentos
+            únicos..."
+          </p>
+        </div>
+
+        <!-- Publicista -->
+        <div class="flex flex-col items-center">
+          <div
+            class="DJ-Mezclas w-[400px] h-[400px] rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv"
+          >
+            <a
+              href="https://www.youtube.com/watch?v=ZtPHjQdqruA&t=10s"
+              target="_blank"
+              aria-label="ArtBeats"
+            >
+              <video
+                src="./Jpg/Servicios/Videos/PintorVid.mp4"
+                autoplay
+                muted
+                loop
+                playsinline
+                class="w-full h-full object-cover"
+              ></video>
+            </a>
+          </div>
+        </div>
+
+        <!-- La cocina de Alzate -->
+        <div class="flex flex-col items-center">
+          <div
+            class="DJ-Mezclas w-[400px] h-[400px] rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv"
+          >
+            <a
+              href="https://www.youtube.com/shorts/qbST5PVyrI0"
+              target="_blank"
+              aria-label="La cocina de Alzate"
+            >
+              <video
+                src="./Jpg/Servicios/Videos/CocineroVid.mp4"
+                autoplay
+                muted
+                loop
+                playsinline
+                class="w-full h-full object-cover"
+              ></video>
+            </a>
+          </div>
+        </div>
+
+        <!-- Guitarrista -->
+        <div class="flex flex-col items-center">
+          <div
+            class="DJ-Mezclas w-[400px] h-[400px] rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv"
+          >
+            <a
+              href="https://www.youtube.com/watch?v=07X1C0zUEFw&list=PLdOr2AHNhg_GugVFLkGyNf1aAZDECB4cW&index=2"
+              target="_blank"
+              aria-label="Guitar"
+            >
+              <video
+                src="./Jpg/Servicios/Videos/GuitarVid.mp4"
+                autoplay
+                muted
+                loop
+                playsinline
+                class="w-full h-full object-cover"
+              ></video>
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <footer>
       <div
         class="footer-container bg-gradient-to-b from-[#3b2b8c] to-[#7265d7] text-white"
