--- a/practica-MP/index_portafolio.html
+++ b/practica-MP/index_portafolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./output.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mini Proyecto</title>
+    <title>PORTAFOLIO MiniProyecto</title>
     <link
       rel="shortcut icon"
       href="./Jpg/Logos/CodeCraft/CodeCraftIcon.png"
@@ -40,15 +40,22 @@
           >Contáctanos</a
         >
       </nav>
-      <br />
-      <div class="mt-[70px] flex justify-center items-center pt-2 mb-4">
+      <div
+        class="w-full flex justify-center md:justify-start items-center pt-2 mb-4 px-4"
+      >
         <img
           src="./Jpg/Logos/CodeCraft/CodeCraftLogo1.png"
           alt="Logo CodeCraft"
-          class="w-[200px] h-auto"
+          class="w-24 sm:w-32 md:w-36 lg:w-40 h-auto md:ml-18"
         />
       </div>
-
+      <div>
+        <img
+          src="./Jpg/Logos/Titulos/LogoPortafolio.png"
+          alt="Portafolio"
+          class="w-full max-w-xs sm:max-w-md md:max-w-lg h-auto object-contain mx-auto mt-8"
+        />
+      </div>
       <!-- clase wave (Ola) -->
       <div class="wave" style="height: 100px; overflow: hidden">
         <svg
@@ -64,7 +71,92 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <section
+        class="grid grid-cols-1 md:grid-cols-2 gap-8 py-10 place-items-center mt-8"
+      >
+        <!-- Portafolio 1 -->
+
+        <div class="flex items-center justify-center pb-10">
+          <a
+            href="http://127.0.0.1:5500/practica%203/index.html"
+            target="_blank"
+            aria-label="portafolio"
+            class="w-[80%] md:w-[70%] flex justify-center border rounded-3xl shadow-lg transition-transform hover:scale-105"
+          >
+            <img
+              src="Jpg/Portafolio/PortafolioCodecraft.png"
+              alt="Portafolio"
+              class="w-full h-auto object-contain"
+            />
+          </a>
+        </div>
+
+        <!-- Portafolio 2 -->
+        <div class="flex items-center justify-center pb-10">
+          <a
+            href="http://127.0.0.1:5500/dia-7/proyecto/index.html"
+            target="_blank"
+            aria-label="Concierto"
+            class="w-[80%] md:w-[70%] flex justify-center border rounded-3xl shadow-lg transition-transform hover:scale-105"
+          >
+            <img
+              src="Jpg/Portafolio/PortafolioConciertoss.png"
+              alt="Concierto"
+              class="w-full h-auto object-contain"
+            />
+          </a>
+        </div>
+
+        <!-- Portafolio 3 -->
+        <div class="flex items-center justify-center pb-10">
+          <a
+            href="http://127.0.0.1:5500/practica%202/index.html"
+            target="_blank"
+            aria-label="FormArtBeats"
+            class="w-[80%] md:w-[70%] flex justify-center border rounded-3xl shadow-lg transition-transform hover:scale-105"
+          >
+            <img
+              src="Jpg/Portafolio/PortafolioFormArtbeats.png"
+              alt="FormArtBeats"
+              class="w-full h-auto object-contain"
+            />
+          </a>
+        </div>
+
+        <!-- Portafolio 4 -->
+        <div class="flex items-center justify-center pb-10">
+          <a
+            href="http://127.0.0.1:5500/Dia-5/Practica%20Noticias/noticias.html"
+            target="_blank"
+            aria-label="Noticias"
+            class="w-[80%] md:w-[70%] flex justify-center border rounded-3xl shadow-lg transition-transform hover:scale-105"
+          >
+            <img
+              src="Jpg/Portafolio/PortafolioNoticias.png"
+              alt="Noticias"
+              class="w-full h-auto object-contain"
+            />
+          </a>
+        </div>
+
+        <!-- Portafolio 5 - centrado abajo -->
+        <div class="col-span-1 md:col-span-2 flex justify-center mb-10">
+          <a
+            href="http://127.0.0.1:5500/dia-2/index2.html"
+            target="_blank"
+            aria-label="Pelis"
+            class="w-[80%] md:w-[50%] flex justify-center border rounded-3xl shadow-lg transition-transform hover:scale-105"
+          >
+            <img
+              src="Jpg/Portafolio/PortafolioPelisFunval.png"
+              alt="PelisFunval"
+              class="w-full h-auto object-contain"
+            />
+          </a>
+        </div>
+      </section>
+    </main>
 
     <footer>
       <div
