Ojala este si sea

--- a/practica-MP/Index_Inicio.html
+++ b/practica-MP/Index_Inicio.html
@@ -25,17 +25,17 @@
           >Inicio</a
         >
         <a
-          href="Index_Portafolio.html"
+          href="Index_portafolio.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Portafolio</a
         >
         <a
-          href="Index_Servicios.html"
+          href="Index_servicios.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Servicios</a
         >
         <a
-          href="Index_Contactanos.html"
+          href="Index_contactanos.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Contáctanos</a
         >
