--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           target="_blank"
           class="bg-blue-600 text-white px-4 py-2 rounded-lg shadow hover:bg-blue-700 transition"
         >
-          Día 11 - Ver Mini Proyecto Completo
+          Semana 2 - Mini Proyecto
         </a>
       </div>
     </div>
