--- a/practica-MP/Index_Inicio.html
+++ b/practica-MP/Index_Inicio.html
@@ -20,24 +20,24 @@
         class="text-white p-4 text-xl flex flex-wrap justify-center md:justify-start"
       >
         <a
-          href="Index_Inicio.html"
+          href="../practica-MP/Index_Inicio.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Inicio</a
         >
         <a
-          href="Index_portafolio.html"
+          href="../practica-MP/index_portafolio.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Portafolio</a
         >
         <a
-          href="Index_servicios.html"
+          href="../practica-MP/Index_servicios.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Servicios</a
         >
         <a
-          href="Index_contactanos.html"
+          href="../practica-MP/Index_contactanos.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
-          >Contáctanos</a
+          >Contactanos</a
         >
       </nav>
       <br />
