--- a/practica-MP/Index_Inicio.html
+++ b/practica-MP/Index_Inicio.html
@@ -124,7 +124,7 @@
                 class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
               >
                 <a
-                  href="index_portafolio.html"
+                  href="./index_portafolio.html"
                   target="_blank"
                   aria-label="portafolio"
                 >
@@ -151,7 +151,7 @@
                 class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
               >
                 <a
-                  href="index_servicios.html"
+                  href="./index_servicios.html"
                   target="_blank"
                   aria-label="servicios"
                 >
@@ -178,7 +178,7 @@
                 class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
               >
                 <a
-                  href="index_contactanos.html"
+                  href="./index_contactanos.html"
                   target="_blank"
                   aria-label="servicios"
                 >
