--- a/practica-MP/Index_contactanos.html
+++ b/practica-MP/Index_contactanos.html
@@ -20,22 +20,22 @@
         class="text-white p-4 text-xl flex flex-wrap justify-center md:justify-start"
       >
         <a
-          href="Index_Inicio.html"
+          href="./index_inicio.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Inicio</a
         >
         <a
-          href="Index_Portafolio.html"
+          href="./index_portafolio.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Portafolio</a
         >
         <a
-          href="Index_Servicios.html"
+          href="./index_servicios.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Servicios</a
         >
         <a
-          href="Index_Contactanos.html"
+          href="./index_contactanos.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Contáctanos</a
         >
