--- a/practica-MP/Index_Inicio.html
+++ b/practica-MP/Index_Inicio.html
@@ -20,22 +20,22 @@
         class="text-white p-4 text-xl flex flex-wrap justify-center md:justify-start"
       >
         <a
-          href="./index_inicio.html"
+          href="index_inicio.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Inicio</a
         >
         <a
-          href="./index_portafolio.html"
+          href="index_portafolio.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Portafolio</a
         >
         <a
-          href="./index_servicios.html"
+          href="index_servicios.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Servicios</a
         >
         <a
-          href="./index_contactanos.html"
+          href="index_contactanos.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Contactanos</a
         >
@@ -124,7 +124,7 @@
                 class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
               >
                 <a
-                  href="./index_portafolio.html"
+                  href="index_portafolio.html"
                   target="_blank"
                   aria-label="portafolio"
                 >
@@ -151,7 +151,7 @@
                 class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
               >
                 <a
-                  href="./index_servicios.html"
+                  href="index_servicios.html"
                   target="_blank"
                   aria-label="servicios"
                 >
@@ -178,7 +178,7 @@
                 class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
               >
                 <a
-                  href="./index_contactanos.html"
+                  href="index_contactanos.html"
                   target="_blank"
                   aria-label="servicios"
                 >
