--- a/practica-MP/temp4.html
+++ b/practica-MP/temp4.html
@@ -44,22 +44,22 @@
         class="text-white p-4 text-xl flex flex-wrap justify-center md:justify-start"
       >
         <a
-          href="index_inicio.html"
+          href="./index-inicio.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Inicio</a
         >
         <a
-          href="index_portafolio.html"
+          href="./index-portafolio.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Portafolio</a
         >
         <a
-          href="index_servicios.html"
+          href="./index-servicios.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Servicios</a
         >
         <a
-          href="index_contactanos.html"
+          href="./index-contactanos.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Contáctanos</a
         >
