No me desampares

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <div class="Mini-Proyecto text-center mt-4">
         <a
-          href="./"
+          href="./practica-mp/index-inicio.html"
           target="_blank"
           class="bg-blue-600 text-white px-4 py-2 rounded-lg shadow hover:bg-blue-700 transition"
         >
