--- a/practica-MP/index-contactanos.html
+++ b/practica-MP/index-contactanos.html
@@ -20,7 +20,7 @@
         class="text-white p-4 text-xl flex flex-wrap justify-center md:justify-start"
       >
         <a
-          href="./index-contactanos.html"
+          href="./index-inicio.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Inicio</a
         >
