--- a/practica-MP/index-inicio.html
+++ b/practica-MP/index-inicio.html
@@ -124,7 +124,7 @@
                 class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
               >
                 <a
-                  href="./index-inicio.html"
+                  href="./index-portafolio.html"
                   target="_blank"
                   aria-label="portafolio"
                 >
