por favor señor

--- a/index.html
+++ b/index.html
@@ -46,29 +46,10 @@
         >
       </div>
 
-      <!-- <div class="Mini Proyecto">
-        <a href="./practica-MP/Index_Inicio.html" target="_blank">
-          Dia 11 - Mini Proyecto</a
+      <div class="mp">
+        <a href="./practica-mp/index-inicio.html" target="_blank">
+          Mini Proyecto</a
         >
-        <a href="./practica-MP/index_portafolio.html" target="_blank">
-          Dia 11 - Mini Proyecto</a
-        >
-        <a href="./practica-MP/Index_servicios.html" target="_blank">
-          Dia 11 - Mini Proyecto</a
-        >
-        <a href="./practica-MP/Index_contactanos.html" target="_blank">
-          Dia 11 - Mini Proyecto</a
-        >
-      </div> -->
-
-      <div class="Mini-Proyecto text-center mt-4">
-        <a
-          href="./practica-mp/index-inicio.html"
-          target="_blank"
-          class="bg-blue-600 text-white px-4 py-2 rounded-lg shadow hover:bg-blue-700 transition"
-        >
-          Semana 2 - Mini Proyecto
-        </a>
       </div>
     </div>
   </body>
