--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         >
       </div>
 
+      <div class="Practica-5">
+        <a href="./practica-5/index.html" target="_blank">
+          Calculadora de Areas</a
+        >
+      </div>
     </div>
   </body>
 </html>
