--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div semana1>
       <div class="Dia2">
-        <a href="./Dia 2/index2.html" target="_blank">
+        <a href="./dia-2/index2.html" target="_blank">
           Día 2 - Web de Peliculas</a
         >
       </div>
