--- a/practica-5/index.html
+++ b/practica-5/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <script src="./main.js" defer></script>
-    <title>Practica 5</title>
+    <title>Calculadora de Areas Geometricas</title>
   </head>
-  <body></body>
+  <body
+    class="min-h-screen bg-[url('./jpg/Calculadora+.png')] bg-cover bg-center bg-no-repeat"
+  ></body>
 </html>
