--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
           Calculadora de Areas</a
         >
       </div>
+      <div class="Aniversario 2025">
+        <a href="./aniversario/index.html" target="_blank">
+          Feliz Aniversario N° 4</a
+        >
+      </div>
     </div>
   </body>
 </html>
