--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           Feliz Aniversario N° 4</a
         >
       </div>
+      <div class="Practica-6">
+        <a href="./practica-6/index.html" target="_blank"> Cajero Funval</a>
+      </div>
     </div>
   </body>
 </html>
