--- a/practica-6/index.html
+++ b/practica-6/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./main.js"></script>
-    <title>Document</title>
+    <title>Cajero Funval</title>
   </head>
-  <body></body>
+  <body
+    class="min-h-screen bg-[url('./jpg/cajero.png')] bg-cover bg-center bg-no-repeat"
+  ></body>
 </html>
