--- a/aniversario/index.html
+++ b/aniversario/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <title>Feliz Cuarto Aniversario</title>
     <link rel="stylesheet" href="./styles.css" />
+
+    <!-- Etiquetas Open Graph -->
+    <meta property="og:title" content="Feliz Cuarto Aniversario" />
+    <meta
+      property="og:description"
+      content="Una página especial para celebrar nuestro amor 💖"
+    />
+    <meta
+      property="og:image"
+      content="https://alzate1075.github.io/funval-G3/aniversario/jpg/portada.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://alzate1075.github.io/funval-G3/aniversario/index.html"
+    />
+    <meta property="og:type" content="website" />
   </head>
+
   <body>
     <div class="fondo-oscuro"></div>
 
@@ -148,7 +165,10 @@
         </div>
 
         <h2>Siempre juntos. 👫</h2>
-        <h3>“Unidos por el amor, superamos cada desafío y celebramos cada triunfo como un solo corazón.”</h3>
+        <h3>
+          “Unidos por el amor, superamos cada desafío y celebramos cada triunfo
+          como un solo corazón.”
+        </h3>
         <div class="galeria-fotos">
           <div class="marco">
             <img src="./jpg/siempre juntos/1.jpg" alt="siempre juntos 1" />
@@ -174,11 +194,17 @@
           <div class="marco">
             <img src="./jpg/siempre juntos/8.jpg" alt="siempre juntos 8" />
           </div>
+        </div>
       </section>
       <div>
-        <h1><em>"Nuestro amor está sellado para siempre. <br>Te amo hoy, mañana y por la eternidad"</em></h1>
+        <h1>
+          <em
+            >"Nuestro amor está sellado para siempre. <br />Te amo hoy, mañana y
+            por la eternidad"</em
+          >
+        </h1>
       </div>
-
+    </div>
     <script>
       window.onload = function () {
         const musica = document.getElementById("musicaFondo");
