--- a/aniversario/index.html
+++ b/aniversario/index.html
@@ -27,10 +27,7 @@
 
     <div class="contenido-principal">
       <audio id="musicaFondo" loop>
-        <source
-          src="./mp3-mp4/BALADAS ROMANTICAS MIX 2023 ⧸ Amor Del Bueno, Causa Dolor, Me Estoy Enamorando,Tu, Salvame, Cuentame.mp3"
-          type="audio/mpeg"
-        />
+        <source src="./mp3-mp4/Baladas romanticas mix.mp3" type="audio/mpeg" />
         Tu navegador no soporta audio HTML5.
       </audio>
 
