--- a/aniversario/index.html
+++ b/aniversario/index.html
@@ -27,7 +27,7 @@
 
     <div class="contenido-principal">
       <audio id="musicaFondo" loop>
-        <source src="./mp3-mp4/Baladas romanticas mix.mp3" type="audio/mpeg" />
+        <source src="./mp3-mp4/Balada_romanticas_mix.mp3" type="audio" />
         Tu navegador no soporta audio HTML5.
       </audio>
 
