--- a/aniversario/index.html
+++ b/aniversario/index.html
@@ -26,8 +26,8 @@
     <div class="fondo-oscuro"></div>
 
     <div class="contenido-principal">
-      <audio id="musicaFondo" loop>
-        <source src="./mp3-mp4/Balada_romanticas_mix.mp3" type="audio" />
+      <audio id="musicaFondo" loop autoplay>
+        <source src="./mp3-mp4/baladas_romanticas_mix.mp3" type="audio/mpeg" />
         Tu navegador no soporta audio HTML5.
       </audio>
 
