--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
       <div class="Practica-6">
         <a href="./practica-6/index.html" target="_blank"> Cajero Funval</a>
       </div>
+      <div class="Practica-7">
+        <a href="./practica-7/index.html" target="_blank">
+          Inventario-Tecnologia</a
+        >
+      </div>
     </div>
   </body>
 </html>
