--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
       </div>
 
       <div class="mp">
-        <a href="./practica-mp/index-inicio.html" target="_blank">
-          Mini Proyecto</a
-        >
+        <a href="./practica-MP/index.html" target="_blank"> Mini Proyecto</a>
       </div>
 
       <div class="Practica-5">
