--- a/practica-MP/index-servicios.html
+++ b/practica-MP/index-servicios.html
@@ -12,7 +12,6 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./Estilo/styles.css" />
-    
   </head>
 
   <body class="w-full h-full">
@@ -21,7 +20,7 @@
         class="text-white p-4 text-xl flex flex-wrap justify-center md:justify-start"
       >
         <a
-          href="./index-inicio.html"
+          href="./index.html"
           class="px-2 py-2 hover:underline hover:scale-110 transform transition duration-300 hover:text-yellow-300"
           >Inicio</a
         >
